# pyfoobar

./: .gitmodules
CAN2ROS_node_generator/: .gitignore  dbc.py
CAN2ROS_node_generator/base_c/lib/: CMakeLists.txt  README.md  package.xml
CAN2ROS_node_generator/base_c/lib/include/: can_com.h  can_interface.h
CAN2ROS_node_generator/base_c/lib/launch/: can_interface.launch
CAN2ROS_node_generator/base_c/lib/src/: can_com.cpp  can_encode_decode.cpp  can_interface.cpp
CAN2ROS_node_generator/examples/: testDbcFile1.dbc  testDbcFile2.dbc
Can2CppInterfaceGenerator/: README.md  dbc.py
Can2CppInterfaceGenerator/base_c/lib/: CMakeLists.txt  README.md
Can2CppInterfaceGenerator/base_c/lib/include/: can_encode_decode.hpp  can_interface.hpp  can_types.hpp
Can2CppInterfaceGenerator/base_c/lib/src/: can_encode_decode.cpp  can_interface.cpp
bestFitPolygon/: convexHull.py  fitPoints.py
can_dbc_stuff/: analyze_dbc.py  decode_candump.sh
colorGen/: main.py
contourMapGen/: map.py
depth_image_to_pcl/: circle_from_3d_ponts.py  cluster.py  gridmap.py  main.py  nonground.pcd  nonground_downsampled.pcd  patchwork_cpp.py  patchwork_on_kitty.py
depthai_example/: README.md  colorDepthImage.py  main.py
direction_reversal_trajectoy/: test1.py  test2.py  test3.py  test4.py  test5.py  test6.py
freetype/: freetype_test1.py  freetype_test2.py  freetype_test3.py
gaussianmotioncorridor/: opencl_test.py  test.py  test2.py  test3.py  test4.py  test4_mt.py
joystick/: main.py
kalman/: kalman.py  upsample_kalman.py
kdtree/: kdtree.py
lazFile/: README.md  downsample.py  extract_pcd_from_csv_with_color.py  lazpy.py  pcdview.py  pipeline.json  transformLazToCsv.sh
multihypothesistracker/: sim_rect.py  sim_simple.py  tracker_rect.py  tracker_simple.py
ntrip_client/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
ntrip_client/launch/: ntrip.launch
ntrip_client/scripts/: ntrip_client
ntrip_client/src/ntrip_client/: main.py
numba/: example2.py  exmaple1.py
obstaclesdetectionpoly/: README.md  concavehull.py  driving_corridor.py  findcontours.py  kernel.cl  occupancy_check_opencl.py  occupancy_trajectory_check.py  occupany_trajectory_polygon_check.py  occupany_trajectory_polygon_check_mt.py  opencl_test.py  union.py
octree/: merge_original_map_sources.py  octree.py  octree_cuboid_chunks_hdf5.py  octree_pcl_example.py  offset_pointcloud_file.py  simpleView.py  viewh5map.py
opencl/: gpu_voxelizer.py  kernel.cl  pcl_example.py
osm_data_loader/: .gitignore  Create Map.ipynb  README.md  avantis.osm  avantis_full.osm  pz_eifeltor.osm  test.nikrulez  test.rules
osm_data_loader/osmFetcher/: osmFetcher.py
osm_data_loader/osmFetcher/osmFetcher/: mapnik_utils.py  osmium_utils.py  rule_utils.py  type_utils.py
osm_data_loader/osmInjector/: osm_node_injector.py
osm_data_loader/test/: load_osm_data.py
pcd/: downsample.py  test.py
pcl_to_rgb_2dcamera/: angle.py  camera_projection_gpu.py  check_opencl.py  chunksSplit.py  coloredCube.py  focallength.py  frustrum_culling.py  frustrum_culling_gpu.py  frustrum_culling_observer_test.py  main.py  rotatcheck.py  test.py
pcl_to_rgb_2dcamera/opencldebs/: README.md
pointInsideFov/: drawfovline.py  test.py
pressureVelTest/: pressurePos.py  pressureV.py
purePursuit/: leader_pursuit.py  pursuit.py
purePursuit/path_planning/: dubins_path.py
purePursuit/path_planning/utils/: plot.py
purePursuit/pid/: Pid.py
segmentation/: hough_transform.py  kmeans_clustering.py
shapely/: circlepoly.py  inflate.py  poly.py
sinXYZ/: main.py
topological_sort_deps/: main.py
transformations/: eulerAnglesToQuat.py  quaternionMultiply.py  quaternionToRotationMat.py  rectRot.py  trafo.py  transformPose.py  transrot.py  velocityRot.py
xodrTransformer/: add_stations.py  run_add_stations.sh  run_aldenhoven.sh  stations.yaml  transform.py
